      configuration file (Closes: #467131)
  * debsign: Allow multiple files to be signed in a single invocation
    (Closes: #457355)
  * mass-bug:
    + Correctly detect the start of a signature in the template file
      (Closes: #467496)
    + Allow package versions to be specified in the package list file
      as package_version (Closes: #467581)

  [ Christoph Berg ]
  * dget:
    + Make unpacking downloaded source packages the default, use -d for the
      old behaviour.
    + Check signature of source packages using dscverify, use -u to disable.
      (Closes: #434521)

  [ Patrick Schoenfeld ]
  * licensecheck: Support a less common form of MIT license usage

  [ Mohammed Adnène Trojette ]
  * debian/bug:
    + make reportbug add configuration data in bug reports.
    + print a message to sensitise users about our "Suggests vs Depends"
      policy.

  [ Stefano Zacchiroli ]
  * debcommit: add support for a new --diff option which dumps changes on
    standard output instead of committing them

 -- Mohammed Adnène Trojette <adn+deb@diwi.org>  Sun, 24 Feb 2008 01:35:09 +0100

devscripts (2.10.16) unstable; urgency=low

  The "storm before the calm" release

  * checkbashisms:
    + Correct the $(<) check to not flag $(<foo grep bar) (Closes: #464522)
    + Tighten the $(( / (( regex
    + Modify the ". foo bar" check to allow ". `foo bar`" (Closes: #464984)
    + Ensure that an explanation is provided for the ". foo bar" check
    + Fix the "shell wrapper" regex to allow a space after ; and before exec
      (Closes: #464976)
    + Add posh to the list of supported interpreters. Thanks to Raphael
      Geissert.
    + Warn about use of >& and <& redirecting to a file (POSIX specifies
      behaviour for - and file descriptors only) (Really closes: #461653)
  * debbugs.pm: New module to encapsulate some of the common BTS functionality
    used by various scripts. Currently contains initial support for some
    SOAP methods.